# Proyecto-VPC

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  session-ses_1fcc.md
docs/: AGENTS.md  ARCHITECTURE.md  COLAB.md  EXPERIMENTS.md  PHYSICAL_PROTOCOL.md
experiments/: 00_yolo_baseline.ipynb  01_overlay_demo.ipynb  02_attack_no_eot.ipynb  03_attack_with_eot.ipynb  Ataque_Adversarial.ipynb  Proyecto_VPC_Colab.ipynb
paper/: avance_1.tex  main.tex  refs.bib  reporte_final.tex
scripts/: check_runtime.py  download_dota.sh  eval_digital.py  eval_physical.py  run_yolo_baseline.py  train_attack.py
src/camouflage/: __init__.py
src/camouflage/attack/: __init__.py  eot.py  losses.py  overlay.py  texture.py  trainer.py
src/camouflage/config/: __init__.py  colab.yaml  default.yaml  loader.py
src/camouflage/data/: __init__.py  dota.py  obb.py
src/camouflage/eval/: __init__.py  baseline.py  metrics.py  runner.py
src/camouflage/models/: __init__.py  victim.py
src/camouflage/physical/: __init__.py  calibration.py  jpeg_diff.py
src/camouflage/utils/: __init__.py  io.py  viz.py
