[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-camouflage-aerial"
version = "0.1.0"
description = "Research code for adversarial camouflage in aerial object detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Project Team" }
]
dependencies = [
  "albumentations>=1.4",
  "kornia>=0.7",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pandas>=2.1",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "scikit-image>=0.22",
  "shapely>=2.0",
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
  "ultralytics>=8.2"
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "jupyterlab>=4.1",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.3"
]

[project.scripts]
camouflage-train = "camouflage.attack.trainer:main"
camouflage-eval = "camouflage.eval.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camouflage = ["config/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
